fixed word wrap for code tags

--- a/main.less
+++ b/main.less
@@ -66,10 +66,12 @@ pre {
   padding: 0.75em;
   border-radius: 0.15em;
   background: #444;
-  word-break: break-all;
-  word-wrap: break-word;
+  overflow-x: auto;
   code {
     color: @matrix;
+    // word-break: break-all;
+    // word-wrap: break-word;
+    white-space: pre;
   }
 }
 
